# iterative-solver

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  ArrayHandlerDDiskDistr_8h_source.html  ArrayHandlerDDiskSparse_8h_source.html  ArrayHandlerDDisk_8h_source.html  ArrayHandlerDefault_8h_source.html  ArrayHandlerDistrDDisk_8h_source.html  ArrayHandlerDistrSparse_8h_source.html  ArrayHandlerDistr_8h_source.html  ArrayHandlerIterableSparse_8h_source.html  ArrayHandlerIterable_8h_source.html  ArrayHandlerSparse_8h_source.html  ArrayHandler_8h_source.html  ArrayHandlers_8h_source.html  BufferManager_8h_source.html  CMakeLists.txt  CastOptions_8h_source.html  DSpaceResetter_8h_source.html  DSpace_8h_source.html  Davidson.cpp  Davidson.h  Diis.cpp  Diis.h  Dimensions_8h_source.html  DistrArrayDisk_8h_source.html  DistrArrayFile_8h_source.html  DistrArrayGA_8h_source.html  DistrArrayHDF5_8h_source.html  DistrArrayMPI3_8h_source.html  DistrArraySpan_8h_source.html  DistrArray_8h_source.html  DistrFlags_8h_source.html  Distribution_8h_source.html  Dockerfile  Doxyfile  Doxyfile.in  ExampleProblemDistrArray_8h-example.html  (+718 more)
benchmark/: ArrayBenchmark.h  CMakeLists.txt  LinearEigensystemBenchmark-mpi.cpp  PagedVector-benchmark.cpp  benchmark.cpp
dependencies/: CMakeLists.txt  Profiler_SHA1  eigen3_SHA1  ppidd_SHA1  profiler_SHA1  utilities_SHA1
example/: CMakeLists.txt  DIISExampleF.F90  DIISexample.cpp  LinearEigensystemBenchmarkF.F90  LinearEigensystemExample-paged.cpp  LinearEigensystemExample.cpp  LinearEigensystemExampleF-Pspace-adaptive.F90  LinearEigensystemExampleF-Pspace.F90  LinearEigensystemExampleF.F90  LinearEquationsExample.cpp  LinearEquationsExampleF.F90  OptimizeExample.cpp  OptimizeExampleF.F90  QuasiNewtonExampleF.F90  QuasiNewtonexample.cpp  dummy.cpp
examples/: .gitignore  CMakeLists.txt  DIISExampleF.F90  DIISexample.cpp  DavidsonExample.cpp  DistrArrayDiskExample.cpp  ExampleProblem.h  ExampleProblemDistrArray.h  LinearEigensystemBenchmarkF.F90  LinearEigensystemDistrArrayExample.cpp  LinearEigensystemExample-Pspace-fixed-serial.cpp  LinearEigensystemExample-file.cpp  LinearEigensystemExample-mpi.cpp  LinearEigensystemExample-paged.cpp  LinearEigensystemExample-serial.cpp  LinearEigensystemExample.cpp  LinearEigensystemExampleF-Pspace-adaptive.F90  LinearEigensystemExampleF-Pspace-mpi.F90  LinearEigensystemExampleF-Pspace.F90  LinearEigensystemExampleF-Pspacead-mpi.F90  LinearEigensystemExampleF-mpi.F90  LinearEigensystemExampleF-problem.F90  LinearEigensystemExampleF.F90  LinearEigensystemExample_new-mpi.cpp  LinearEigensystemMultirootExample.cpp  LinearEquationsExample-Pspace.cpp  LinearEquationsExample.cpp  LinearEquationsExampleF-matrix.F90  LinearEquationsExampleF.F90  LinearEquationsSmall.f90  NonLinearEquationsExample.cpp  NonLinearExampleF.F90  OptimizeDistrArrayExample.cpp  OptimizeExample.cpp  OptimizeExample.ipynb  OptimizeExampleF-problem.F90  OptimizeExampleF.F90  RSPTexample.cpp  SolverFactory_implementation.cpp  bh.h0  (+5 more)
examples/bh.molpro/: bh.inp
examples/foreign-container/: CMakeLists.txt  container.h  solve-with-foreign-container.cpp
examples/he.molpro/: .Info.plist.writing_object  Info.plist  he.inp
examples/hf.molpro/: hf.inp
lib/: CMakeLists.txt  IterativeSolver-config.h.in  IterativeSolver.cpp  IterativeSolver.h  IterativeSolverF.F90  LAvector.h  LinearAlgebra.h  OpaqueVector.h  OutOfCoreArray.h  PagedVector.h  SimpleVector.h  config.in  libconfig.cmake
src/: CMakeLists.txt  ISDavidson.cpp  ISDiis.cpp  ISDiis.h  ISRSPT.cpp  ISRSPT.h  IterativeSolver.cpp  IterativeSolver.h  ParameterVector.h
src/iterative_solver/: __init__.py-  iterative_solver.pxd  problem.py  test_optimize.py
src/iterative_solver_extension/: .gitignore
src/molpro/: CMakeLists.txt  IterativeSolver.cpp  IterativeSolver.h  OutOfCoreArray.h  PagedVector.h
src/molpro/linalg/: CMakeLists.txt  IterativeSolver.cpp  IterativeSolver.h  IterativeSolverC.cpp  IterativeSolverC.h  IterativeSolverCMPI.cpp  IterativeSolverCSerial.cpp  IterativeSolverF.F90  Iterative_Solver_Matrix_Problem.F90  Iterative_Solver_PSpace.F90  Iterative_Solver_Problem.F90  OpaqueArray.h  OpaqueVector.h  OutOfCoreArray.h  P.cpp  P.h  PagedArray.h  Q.cpp  Q.h  SimpleArray.h  SimpleVector.h  options.cpp  (+1 more)
test/: CMakeLists.txt  IterativeSolver-OOCA-test.cpp  IterativeSolver-test.cpp  LinearEigensystem-file-test.cpp  LinearEigensystem-test.cpp  LinearEquations-test.cpp  Optimize-test.cpp  OutOfCoreArray-test.cpp  PagedVector-test.cpp  SimpleVector-test.cpp  TestIterativeSolver.cpp  create_solver.cpp  create_solver.h  test.cpp  test.h  testArrayHandlers.cpp
test/array/: CMakeLists.txt  data_util.h  file_util.h  main.cpp  parallel_util.cpp  parallel_util.h  testArrayHandler.cpp  testArrayHandlerDDisk.cpp  testArrayHandlerDefault.cpp  testArrayHandlerDistr.cpp  testArrayHandlerDistrSparse.cpp  testArrayHandlerFactory.cpp  testArrayHandlerIterable.cpp  testArrayHandlerIterableSparse.cpp  testArrayHandlerSparse.cpp  testArrayHandlers.cpp  testBufferManager.cpp  testDistrArray.cpp  testDistrArray.h  testDistrArrayDisk.h  testDistrArrayDiskHDF5.cpp  testDistrArrayFile.cpp  testDistrArrayGA.cpp  testDistrArrayHDF5.cpp  testDistrArrayMPI3.cpp  testDistrArraySpan.cpp  testDistrFlags.cpp  testDistribution.cpp  testGemm.cpp  testHDF5Handle.cpp  testLockMPI3.cpp  testPHDF5Handle.cpp  testResource.cpp  testSpan.cpp  testTempFile.cpp  testUtil.cpp  test_temp_file.cpp  testutil.cpp
test/itsolv/: CMakeLists.txt  Optimize-test.cpp  SolverFactory_implementation.cpp  test.h  testDSpaceResetter.cpp  test_Interpolate.cpp  test_LinearEigensystem.cpp  test_LinearEigensystemF.f90  test_LinearEquations.cpp  test_LinearEquationsF.f90  test_NonLinearEquations.cpp  test_NonLinearEquationsF.f90  test_Optimize.cpp  test_OptimizeF.f90  test_Options.cpp  test_RSPT.cpp  test_SolverFactory.cpp  test_SolverFactory_implementation.cpp  test_options_map.cpp  test_profiler.cpp  test_rayleigh_quotient.cpp  test_reset_dspace.cpp  test_simplified.cpp  test_svd_system.cpp  test_util.cpp  test_wrap.cpp  vector_types.h
(+395 files in other folders)
