#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "iterative-solver"
dynamic = ["version"]
authors = [
    { name = "Peter Knowles", email = "knowlespj@cardiff.ac.uk" },
    { name = "Marat Sibaev" },
    { name = "Iakov Polyak" },
    { name = "Robert Welch" },
]
description = "Implements iterative solvers for linear and non-linear problems and distributed arrays for HPC. "
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]

[project.urls]
Homepage = "https://github.com/molpro/iterative-solver"
Issues = "https://github.com/molpro/iterative-solver/issues"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8", "wheel", "Cython>=3", "numpy>=1.26", "cmake"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/iterative_solver/_version.py"

[tool.setuptools]
package-dir = { "iterative_solver" = "src/iterative_solver" }
packages = ["iterative_solver"]
