foreach (t PagedVector-benchmark)
    add_executable(${t}.exe ${t}.cpp)
    target_link_libraries(${t}.exe PUBLIC ${PROJECT_NAME} ${MPI_CXX_LIBRARIES})
    if (MPI_FOUND)
        add_test(${t} ${MPIEXEC} ${MPIOPTIONS} ${t}.exe)
    else (MPI_FOUND)
        add_test(${t} ${t}.exe)
    endif (MPI_FOUND)
endforeach ()
